--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
               <div class="d-flex mr-auto">
                 <a href="#" class="d-flex align-items-center mr-4">
                   <span class="icon-envelope mr-2"></span>
-                  <span class="d-none d-md-inline-block">info@domain.com</span>
+                  <span class="d-none d-md-inline-block">nipunagamage@gmail.com</span>
                 </a>
                 <a href="#" class="d-flex align-items-center mr-auto">
                   <span class="icon-phone mr-2"></span>
-                  <span class="d-none d-md-inline-block">+1 234 4567 8910</span>
+                  <span class="d-none d-md-inline-block">+94 77 164 2702</span>
                 </a>
               </div>
             </div>
